Reparare interceptor cu traduceri

--- a/cod-sursa/frontend/src/app/app.component.html
+++ b/cod-sursa/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<div>{{'hello' | translate}}</div>
+<ge-header></ge-header>
+<router-outlet></router-outlet>
+<div>{{'avizari-maritime' | translate}}</div>
