--- a/cod-sursa/frontend/src/app/header/header.component.html
+++ b/cod-sursa/frontend/src/app/header/header.component.html
@@ -1,11 +1,19 @@
-<ul ngbNav #nav="ngbNav" class="nav-tabs">
-  <li ngbNavItem>
-    <button ngbNavLink>{{'avizari-maritime' | translate}}</button>
-    <ng-template ngbNavContent>First content</ng-template>
-  </li>
-  <li ngbNavItem>
-    <button ngbNavLink>Second</button>
-    <ng-template ngbNavContent>Second content</ng-template>
-  </li>
-</ul>
-<div [ngbNavOutlet]="nav"></div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="navbar-brand">GE</div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav col-lg-6">
+        <li class="nav-item">
+          <a class="nav-link" ngClass="{'active': {{routeContains('/avizare-maritima')}}}" routerLink="/avizare-maritima">{{'meniu.avizari-maritime' | translate}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ngClass="{'active': {{routeContains('/buletin-pilotaj')}}}" routerLink="/buletin-pilotaj">{{'meniu.buletine-pilotaj' | translate}}</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
