--- a/cod-sursa/frontend/src/app/app.component.html
+++ b/cod-sursa/frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
 <ge-header></ge-header>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
