--- a/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
+++ b/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
@@ -9,10 +9,13 @@
     </div>
 </div>
 <div class="row mb-1">
-    <div class="col-3">
+    <div class="col-2">
         <b>{{'avm.nava' | translate}}</b>
     </div>
-    <div class="col-3">
+  <div class="col-2">
+    <b>{{'avm.port' | translate}}</b>
+  </div>
+    <div class="col-2">
         <b>{{'avm.agent-nava' | translate}}</b>
     </div>
     <div class="col-3">
@@ -23,14 +26,17 @@
     </div>
 </div>
 <div class="row border-top mb-1" *ngFor="let item of items">
-    <div class="col-3">
+    <div class="col-2">
         {{item.shipName}}
     </div>
-    <div class="col-3">
+    <div class="col-2">
+      {{item.portName}}
+    </div>
+    <div class="col-2">
         {{item.agentName}}
     </div>
     <div class="col-3">
-        {{item.estimatedArrivalTime}}
+        {{formatDateTime(item.estimatedArrivalTime)}}
     </div>
     <div class="col-3">
         {{('avm.status-' + item.documentStatus) | translate}}
