Configurare angular guard Adaugare username, buton logout si buton edit avizari maritime

--- a/cod-sursa/frontend/src/app/features/avizare-maritima/av-details/av-details.component.html
+++ b/cod-sursa/frontend/src/app/features/avizare-maritima/av-details/av-details.component.html
@@ -45,7 +45,7 @@
   <div class="row mb-1" *ngIf="maritimeNotice?.rejectionReason !== null">
     <div class="col-12 col-md-6 offset-md-3">
       <label class="form-label fw-bolder">{{'app.observations' | translate}}:</label>
-      {{('avm.status-' + maritimeNotice?.rejectionReason) | translate}}
+      {{maritimeNotice?.rejectionReason}}
     </div>
   </div>
   <div class="row mb-1">
