--- a/cod-sursa/frontend/src/app/features/avizare-maritima/av-resolve/av-resolve.component.html
+++ b/cod-sursa/frontend/src/app/features/avizare-maritima/av-resolve/av-resolve.component.html
@@ -93,7 +93,7 @@
     <div class="row mb-1">
       <div class="col-12 col-md-6 offset-3">
         <label for="reason" class="form-label">{{'app.observations' | translate}}</label>
-        <textarea class="form-control" id="reason"></textarea>
+        <textarea class="form-control" id="reason" formControlName="rejectionReason"></textarea>
       </div>
     </div>
     <div class="row mb-1">
