--- a/cod-sursa/frontend/src/app/header/header.component.html
+++ b/cod-sursa/frontend/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav col-lg-6">
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" ngClass="{'active': {{routeContains('/avizare-maritima')}}}" routerLink="/avizare-maritima">{{'meniu.avizari-maritime' | translate}}</a>
         </li>
@@ -14,6 +14,12 @@
           <a class="nav-link" ngClass="{'active': {{routeContains('/buletin-pilotaj')}}}" routerLink="/buletin-pilotaj">{{'meniu.buletine-pilotaj' | translate}}</a>
         </li>
       </ul>
+      <div class="d-flex">
+        <button type="button" class="btn btn-secondary" (click)="logout()" ngbTooltip="{{'app.logout' | translate}}">
+          <span class="me-1">{{userName | async}}</span>
+          <i class="bi bi-box-arrow-right"></i>
+        </button>
+      </div>
     </div>
   </div>
 </nav>
