--- a/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
+++ b/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
@@ -42,14 +42,17 @@
         {{('avm.status-' + item.documentStatus) | translate}}
     </div>
     <div class="col-1 m-auto">
-      <button type="button" class="btn btn-secondary me-2" routerLink="{{item.id!}}" ngbTooltip="{{'app.vizualizare' | translate}}">
+      <button type="button" class="btn btn-secondary me-1" routerLink="{{item.id!}}" ngbTooltip="{{'app.vizualizare' | translate}}">
         <i class="bi bi-eye"></i>
       </button>
-      <button type="button" class="btn btn-secondary" *ngIf="showResolveBtn(item)" (click)="goToResolve(item.id!)" ngbTooltip="{{'app.avizeaza' | translate}}">
+      <button type="button" class="btn btn-secondary me-1" *ngIf="showResolveBtn(item)" (click)="goToResolve(item.id!)" ngbTooltip="{{'app.avizeaza' | translate}}">
         <i class="bi bi-check"></i>
       </button>
-      <button type="button" class="btn btn-secondary" *ngIf="showEditBtn(item)" (click)="goToEdit(item.id!)" ngbTooltip="{{'app.editeaza' | translate}}">
+      <button type="button" class="btn btn-secondary me-1" *ngIf="showEditBtn(item)" (click)="goToEdit(item.id!)" ngbTooltip="{{'app.editeaza' | translate}}">
         <i class="bi bi-pencil-square"></i>
+      </button>
+      <button type="button" class="btn btn-secondary" *ngIf="showCancelBtn(item)" (click)="goToCancel(item.id!)" ngbTooltip="{{'app.anuleaza' | translate}}">
+        <i class="bi bi-x-octagon"></i>
       </button>
     </div>
 </div>
