--- a/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
+++ b/cod-sursa/frontend/src/app/features/avizare-maritima/av-home/av-home.component.html
@@ -8,6 +8,20 @@
         <button type="button" class="btn btn-primary" routerLink="new">{{'avm.adauga' | translate}}</button>
     </div>
 </div>
+<form [formGroup]="myForm">
+  <div class="row mb-1">
+    <div class="col-12 col-md-4 offset-md-4">
+      <label for="documentStatus" class="form-label">{{'avm.status' | translate}}</label>
+      <ng-select id="documentStatus" [items]="documentStatuses" bindLabel="label" formControlName="documentStatus">
+      </ng-select>
+    </div>
+  </div>
+  <div class="row mb-1">
+    <div class="col-12 text-center">
+      <button type="button" class="btn btn-secondary" (click)="onClickSearch()">{{'app.cauta' | translate}}</button>
+    </div>
+  </div>
+</form>
 <div class="row mb-1">
     <div class="col-2">
         <b>{{'avm.nava' | translate}}</b>
@@ -25,21 +39,25 @@
         <b>{{'avm.status' | translate}}</b>
     </div>
 </div>
-<div class="row border-top" *ngFor="let item of items">
+<div class="spinner-border" role="status" *ngIf="isLoading">
+  <span class="visually-hidden">Loading...</span>
+</div>
+<ng-container *ngIf="!isLoading">
+  <div class="row border-top" *ngFor="let item of items">
     <div class="col-2 m-auto">
-        {{item.shipName}}
+      {{item.shipName}}
     </div>
     <div class="col-2 m-auto">
       {{item.portName}}
     </div>
     <div class="col-2 m-auto">
-        {{item.agentName}}
+      {{item.agentName}}
     </div>
     <div class="col-2 m-auto">
-        {{formatDateTime(item.estimatedArrivalTime)}}
+      {{formatDateTime(item.estimatedArrivalTime)}}
     </div>
     <div class="col-3 m-auto">
-        {{('avm.status-' + item.documentStatus) | translate}}
+      {{('avm.status-' + item.documentStatus) | translate}}
     </div>
     <div class="col-1 m-auto">
       <button type="button" class="btn btn-secondary me-1" routerLink="{{item.id!}}" ngbTooltip="{{'app.vizualizare' | translate}}">
@@ -55,4 +73,5 @@
         <i class="bi bi-x-octagon"></i>
       </button>
     </div>
-</div>
+  </div>
+</ng-container>
